@@ -45,6 +45,7 @@ calibrationcalculatordialog::calibrationcalculatordialog(
 		_guiderate = _guider->getGuiderate();
 		ui->guiderateField->setText(QString(astro::stringprintf("%.3f",
 			_guiderate).c_str()));
+		_decrate = 1.0;
 	} else {
 		// we have no guider, so we have to provide some reasonable
 		// initial values
@@ -52,6 +53,7 @@ calibrationcalculatordialog::calibrationcalculatordialog(
 		_pixelsize = 0.005;
 		_angle = 0;
 		_guiderate = 0.5;
+		_decrate = 1.0;
 	}
 
 	_declination = ui->declinationSpinBox->value();
@@ -92,6 +94,8 @@ calibrationcalculatordialog::calibrationcalculatordialog(
 		this, SLOT(decinvertChanged(int)));
 	connect(ui->westCheckBox, SIGNAL(stateChanged(int)),
 		this, SLOT(orientationChanged(int)));
+	connect(ui->decrateSpinBox, SIGNAL(valueChanged(double)),
+		this, SLOT(decrateChanged(double)));
 
 	connect(ui->buttonBox, SIGNAL(accepted()),
 		this, SLOT(acceptCalibration()));
@@ -134,8 +138,8 @@ void	calibrationcalculatordialog::updateCalibration() {
 	double	a = _angle * M_PI / 180;
 	int	decsign = (_decinvert) ? -1 : 1;
 	int	westsign = (_telescopewest) ? 1 : -1;
-	_cal.coefficients[1] = -decsign * pixelspeed * sin(a);
-	_cal.coefficients[4] =  decsign * pixelspeed * cos(a);
+	_cal.coefficients[1] = -decsign * pixelspeed * sin(a) * _decrate;
+	_cal.coefficients[4] =  decsign * pixelspeed * cos(a) * _decrate;
 	pixelspeed = 2 * pixelspeed * cos(_declination * M_PI / 180);
 	_cal.coefficients[0] = pixelspeed * westsign * cos(a);
 	_cal.coefficients[3] = pixelspeed * westsign * sin(a);
@@ -207,6 +211,12 @@ void	calibrationcalculatordialog::setOrientation(bool west) {
 
 void	calibrationcalculatordialog::orientationChanged(int x) {
 	setOrientation(x > 0);
+}
+
+void	calibrationcalculatordialog::decrateChanged(double decrate) { 
+	_decrate = decrate;
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "new dec rate: %f", decrate);
+	updateCalibration();
 }
 
 } // namespace snowgui
