@@ -28,6 +28,8 @@ class calibrationcalculatordialog : public QDialog {
 	double	_angle;		// rotation angle in [degrees]
 	double	_guiderate;	// guider rate, default 0.5
 	double	_declination;	// declination in [degrees]
+	double	_decrate;	// rate of the declination drive
+				// relative to the RA drive
 	bool	_telescopewest;	// wether or not the telescope was on the west
 	bool	_decinvert;	// do the optics vertically flip the image?
 
@@ -45,6 +47,7 @@ public:
 	double	pixelsize() const { return _pixelsize; }
 	double	angle() const { return _angle; }
 	double	guiderate() const { return _guiderate; }
+	double	decrate() const { return _decrate; }
 	double	declination() const { return _declination; }
 	bool	telescopewest() const { return _telescopewest; }
 	bool	decinvert() const { return _decinvert; }
@@ -53,6 +56,7 @@ public:
 	void	pixelsize(double s);
 	void	angle(double a);
 	void	guiderate(double a);
+	void	decrate(double a);
 	void	declination(double d);
 	void	telescopewest(bool w);
 	void	decinvert(bool i);
@@ -68,6 +72,7 @@ signals:
 public slots:
 	void	angleChanged(double);
 	void	declinationChanged(double);
+	void	decrateChanged(double);
 
 	void	decinvertChanged(int);
 
